# niivue-nninteractive

./: .gitignore  LICENSE  README.md  pyproject.toml
frontend/: .env  bun.lockb  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  niivue-nninteractive.ts  types.ts
frontend/src/components/: ControlPanel.tsx  LeftSidebar.tsx  StatusDisplay.tsx  Toolbar.tsx  Viewer.tsx  index.ts
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: index.ts  useNiivueInstance.ts  useSegmentationState.ts  useToolbarState.ts
src/niivue_nninteractive/: api.py
tests/: __init__.py  conftest.py  test_api.py
